Make sure that splitter state is saved in Preset Chooser

BUG:474669